# paperpile-tools

./: README.md  setup.cfg  setup.py
paperpile_tools/: bibliography.py  cli.py  util.py
pptools/: __init__.py  bibliography.py  cli.py  paperpile.py  util.py
pptools/util/: __init__.py  bijection.py  misc.py
tests/: test_util.py
