[metadata]
name = paperpile-tools
version = attr: pptools.__version__
description = Tools for extracting data from Paperpile exports.
long_description = file: README.md
author = Jared Lumpe
author_email = mjlumpe@gmail.com
url = https://github.com/jlumpe/paperpile-tools


[options]
packages = find:

python_requires = >=3.5

install_requires =
	bibtexparser~=1.1
	click~=7.0

test_requirements =
	pytest

include_package_data = true


[options.entry_points]
console_scripts =
	pptools=pptools.cli:cli


# Aliases for setuptools commands
[aliases]
test = pytest


# Pytest settings
[tool:pytest]

testpaths = tests

# Run doctests on all modules
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL


# Flake8 settings
[flake8]

# Ignore these codes:
ignore =
	# TABS ARE BETTER
	W191,
	# indentation contains mixed spaces and tabs - spaces for alignment
	E101,
	# Blank line at end of file - we require this in .editorconfig
	W391

# Exclude these paths:
exclude = docs

# Check style of doctests (not working?)
doctests = True
